welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:3: error: value a is not a member of Boolean
rep = ( temp1 > 100 & temp2 < 0 ) || ( temp1 < 0 a temp2 >100 )
                                                 ^